app/base/apps/redisinsight/redisinsight-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisinsight-svc
  namespace: default
spec:
  selector:
    app: redisinsight
  ports:
  - name: http
    port: 80
    targetPort: 5540
